[package]
name = "audio_thread_priority"
version = "0.1.0"
authors = ["Paul Adenot <paul@paul.cx>"]

[dependencies]
cfg-if = "0.1"
log = "0.4"
simple_logger = { version =  "0.4", optional = true }

[features]
terminal-logging = ["simple_logger"]

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.1"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [ "everything" ] }
kernel32-sys = "0.2"
