[package]
name = "audio_thread_priority"
version = "0.11.0"
authors = ["Paul Adenot <paul@paul.cx>"]
description = "Bump a thread to real-time priority, for audio work, on Linux, Windows and macOS"
license = "MPL-2.0"
repository = "https://github.com/padenot/audio_thread_priority"

[lib]
crate-type = ["staticlib", "rlib"]
name = "audio_thread_priority"

[dependencies]
cfg-if = "0.1"
log = "0.4"
simple_logger = { version =  "0.4", optional = true }

[features]
terminal-logging = ["simple_logger"]

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.1"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [ "avrt", "errhandlingapi", "ntdef", "minwindef"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
dbus = "0.6.4"
